--- a/10.webpack/001/package.json
+++ b/10.webpack/001/package.json
@@ -4,21 +4,17 @@
   "description": "",
   "main": "webpack.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":  "webpack-dev-server  --open"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.22.1",
     "url-loader": "^1.1.0",
     "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-cli": "^3.1.0"
   }
 }
