--- a/10.webpack/008redux课堂/package.json
+++ b/10.webpack/008redux课堂/package.json
@@ -13,7 +13,6 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "babel-plugin-import": "^1.8.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
@@ -26,9 +25,11 @@
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
-    "antd": "^3.8.1",
+    "antd": "^3.8.2",
     "axios": "^0.18.0",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   }
 }
