--- a/11.shop/home/package.json
+++ b/11.shop/home/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "file-loader": "^2.0.0",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "hogan.js": "^3.0.2"
   }
 }
